src/tui/snapshots/reflect__tui__timeline_view__tests__empty_timeline.snap
---
source: src/tui/timeline_view.rs
assertion_line: 371
expression: output
---
"┌Test Timeline─────────────────────────────────────────────────────────────────┐"
"│No events found for this entity.                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
