src/tui/snapshots/reflect__tui__timeline_view__tests__meeting_timeline.snap
---
source: src/tui/timeline_view.rs
expression: output
---
"┌Meeting Timeline──────────────────────────────────────────────────────────────┐"
"│## 📅 Meeting Created — 2024-01-15 10:30                                      │" Hidden by multi-width symbols: [(5, " ")]
"│                                                                              │"
"│Team Standup                                                                  │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
