src/tui/snapshots/reflect__tui__timeline_view__tests__reflection_timeline.snap
---
source: src/tui/timeline_view.rs
expression: output
---
"┌Reflection Timeline───────────────────────────────────────────────────────────┐"
"│## 💭 Reflection — 2024-01-15 10:30                                           │" Hidden by multi-width symbols: [(5, " ")]
"│                                                                              │"
"│This is reflection content                                                    │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
