src/tui/snapshots/reflect__tui__timeline_view__tests__reflection_updated_timeline.snap
---
source: src/tui/timeline_view.rs
expression: output
---
"┌Reflection Timeline───────────────────────────────────────────────────────────┐"
"│## 💭 Reflection Update — 2024-01-15 10:30                                    │" Hidden by multi-width symbols: [(5, " ")]
"│                                                                              │"
"│ old line                                                                     │"
"│+new line                                                                     │"
"│-removed line                                                                 │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
