src/tui/snapshots/reflect__tui__timeline_view__tests__summary_timeline.snap
---
source: src/tui/timeline_view.rs
expression: output
---
"┌Summary Timeline──────────────────────────────────────────────────────────────┐"
"│## 📊 Summary — 2024-01-15 10:30                                              │" Hidden by multi-width symbols: [(5, " ")]
"│                                                                              │"
"│Weekly summary content                                                        │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
